# Opti511

./: .gitignore  CMakeLists.txt  README.md
data/: GradientMap.pgm  I1.pgm  I2.pgm  I3.pgm  I4.pgm  KittlerThreshold.pgm  KittlerThreshold1.pgm  LoGEdge.pgm  LoGEdge_1.pgm  LoGEdge_2.pgm  LoGEdge_4.pgm  LoGOriginal.pgm  LoGRawEdge.pgm  LoGRawEdge_1.pgm  LoGRawEdge_2.pgm  LoGRawEdge_4.pgm  OriginalEdgemap.pgm  Sobel.pgm  Sobel1.pgm  address.pgm  cman.pgm  cmanswirl.pgm  edgemap_200000.pgm  edgemap_3000.pgm  graybook.pgm  keys.pgm  label.pgm  label1.pgm  linux.pgm  morph.pgm  morph_result.pgm  output1.pgm  output2.pgm
src/: ArgumentParsing.cpp  ArgumentParsing.h  BaseImage.cpp  BaseImage.h  BinaryClosing.cpp  BinaryDilation.cpp  BinaryErosion.cpp  BinaryOpening.cpp  Closing.cpp  ConnectedComponentsLabelling.cpp  ConnectedComponentsLabelling.h  Dilation.cpp  Erosion.cpp  Histogram.cpp  Histogram.h  Kittler.cpp  KittlerThreshold.cpp  KittlerThreshold.h  Label.cpp  LoG.cpp  LoGEdge.cpp  LoGEdge.h  NonMaxSuppression.cpp  NonMaxSuppression.h  Opening.cpp  SobelEdge.cpp  SobelEdge.h  ZeroCross.cpp  main.cpp  sobel.cpp  sobel.cpp~
src/Include/: ArgumentParsing.h  BaseImage.h  BinaryClosing.h  BinaryDilation.h  BinaryErosion.h  BinaryOpening.h  ConnectedComponentsLabelling.h  KittlerThreshold.h  LoGEdge.h  NonMaxSuppression.h  SobelEdge.h  Utils.h  ZeroCross.h
